# ProjectCard

./: .gitignore  CMakeLists.txt  Win.bat  imgui.ini
Data/ImGui/: default.ini
Data/Shaders/: Texture.fs  Texture.glsl  model.glsl  model1.glsl
EbonyEditor/: CMakeLists.txt
EbonyEditor/include/: EditorApp.h  EditorLayer.h
EbonyEditor/src/: EditorLayer.cpp  SceneHierarchyPanel.cpp
Resources/Cards/Standard/normal_cards/: all_cards.png.import
Resources/Cards/Standard/normal_cards/individual/card back/: cardBackBlue.png.import  cardBackGreen.png.import  cardBackRed.png.import
Resources/Cards/Standard/normal_cards/individual/clubs/: clubs_1.png.import  clubs_10.png.import  clubs_11.png.import  clubs_12.png.import  clubs_13.png.import  clubs_2.png.import  clubs_3.png.import  clubs_4.png.import  clubs_5.png.import  clubs_6.png.import  clubs_7.png.import  clubs_8.png.import  clubs_9.png.import
Resources/Cards/Standard/normal_cards/individual/diamonds/: diamonds_1.png.import  diamonds_10.png.import  diamonds_11.png.import  diamonds_12.png.import  diamonds_13.png.import  diamonds_2.png.import  diamonds_3.png.import  diamonds_4.png.import  diamonds_5.png.import  diamonds_6.png.import  diamonds_7.png.import  diamonds_8.png.import  diamonds_9.png.import
Resources/Cards/Standard/normal_cards/individual/hearts/: hearts_1.png.import  hearts_10.png.import  hearts_11.png.import  hearts_12.png.import  hearts_13.png.import  hearts_2.png.import  hearts_3.png.import  hearts_4.png.import  hearts_5.png.import  hearts_6.png.import  hearts_7.png.import  hearts_8.png.import  hearts_9.png.import
Resources/Cards/Standard/normal_cards/individual/spades/: spades_1.png.import  spades_10.png.import  spades_11.png.import  spades_12.png.import  spades_13.png.import  spades_2.png.import  spades_3.png.import  spades_4.png.import  spades_5.png.import  spades_6.png.import  spades_7.png.import  spades_8.png.import  spades_9.png.import
Resources/Cards/Standard/rect_cards/: all_card_rect.png.import
Resources/Cards/Standard/rect_cards/individual/card back/: card_back_rect_1.png.import  card_back_rect_2.png.import  card_back_rect_3.png.import
engine/: CMakeLists.txt
engine/include/: CE_Assert.h  CardEngine.h  Config.h  Log.h  PlatformDetection.h  UUID.h
engine/include/Renderer/: Buffer.h  Camera.h  Font.h  Framebuffer.h  GraphicsContext.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h
engine/include/Scene/: Components.h  Entity.h  Scene.h
engine/src/: Buffer.cpp  Camera.cpp  Entity.cpp  Font.cpp  Framebuffer.cpp  GraphicsContext.cpp  Log.cpp  RenderAPI.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Scene.cpp  Shader.cpp  Texture.cpp  UUID.cpp  UniformBuffer.cpp  VertexArray.cpp
game/: CMakeLists.txt
game/include/: Application.h  GameApp.h  GameLayer.h  Window.h
game/include/Core/: Config.h  Input.h  Layer.h  LayerStack.h
game/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
game/include/Game/: Card.h  InGameMenuLayer.h  MainMenuLayer.h  UI.h
game/include/ImGui/: Helpers.h  ImGuiInputs.h
game/include/Layers/: 3dTestLayer.h  ImGuiLayer.h  TestLayer.h
game/src/: Application.cpp  GameLayer.cpp  ImGuiLayer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Window.cpp  main.cpp
